# pufferfish-chesshacks

./: .gitignore  README.md  log.txt  requirements.txt  serve.py
bot/cpp/: CMakeLists.txt.bak  features.cpp  features.h  main.cpp.bak  nnue.cpp.bak  nnue.h.bak  nnue_constants.h  nnue_constants.h.bak  position.cpp  position.h
bot/python/: .gitignore  MODAL_SETUP.md  config.py  export_int16.py  features.py  model.py  nnue_state_dict.pt  overnight.pt  train.py  train_modal.py
mini/: features.py  inference_model.py  memory_test.py  model.py  pst.py  search.py  tiny_model.pt
modal/: __init__.py  fetch_data.py  train.py
pufferfish/: .gitignore  CMakeLists.txt  main.cpp  tests.cpp
pufferfish/engine/: bitboard.cpp  bitboard.h  features.cpp  features.h  movegen.cpp  movegen.h  nn_interface.h  nnue.cpp  nnue.h  nnue_constants.h  position.cpp  position.h  pst.h  search.cpp  search.h  simple_nnue.cpp  simple_nnue.h  tt.cpp  tt.h  types.h
src/: main.py
src/bot/: README.md  __init__.py  dataset.py  export_inference_checkpoint.py  export_int16.py  model.py  model_compact.py  nnue.py  requirements.txt  search.py  test_scenarios.py  train_nnue.py
